kubernetes-config-files/mobsos/mobsos-evaluation-center.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mobsos-eval-center
  labels:
    app: mobsos-eval-center
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobsos-eval-center
  template:
    metadata:
      labels:
        app: mobsos-eval-center
    spec:
      tolerations:
      - key: "node-role.kubernetes.io"
        operator: "Equal"
        value: "master"
        effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/role: master
      containers:
      - name: mobsos-evaluation-center
        image: mslupczynski/mobsos-evaluation-center
        imagePullPolicy: Always
        ports:
          - containerPort: 4200
        volumeMounts:
        - name: pastry-config-volume
          mountPath: /src/etc/pastry.properties
          subPath: pastry-mobsos-evaluation-center.properties
      - name: y-websocket-server
        image: rwthacis/y-websockets-server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1234
      volumes:
      - name: pastry-config-volume
        configMap:
          name: pastry-config
---
apiVersion: v1
kind: Service
metadata:
  name: mobsos-eval-center
spec:
  selector:
    app: mobsos-eval-center 
  ports:
  - port: 1234
    nodePort: 31501
    name: y-websocket
  - port: 4200
    nodePort: 31509
    name: mobsos-eval-center
  type: NodePort
